feat ( server ) : add getting server by id
