# src/api/routers/servers.go
@@ -1,0 +1,13 @@
+package routers
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/itera-io/openstack-web-client/api/handlers"
+	"github.com/itera-io/openstack-web-client/config"
+)
+
+func Server(router *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewServersHandler(cfg)
+
+	router.GET("/:id/", h.GetServer)
+}
