# src/docs/swagger.json
@@ -740,6 +740,67 @@
                 }
             }
         },
+        "/v2/servers/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
+                "description": "Get Server by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Servers"
+                ],
+                "summary": "Get Server",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "GetServer response",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/github_com_itera-io_openstack-web-client_api_helper.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/github_com_itera-io_openstack-web-client_api_dto.GetServerResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_itera-io_openstack-web-client_api_helper.BaseHttpResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_itera-io_openstack-web-client_api_helper.BaseHttpResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v3/Projects": {
             "get": {
                 "security": [
@@ -1366,6 +1427,14 @@
                 }
             }
         },
+        "github_com_itera-io_openstack-web-client_api_dto.GetServerResponse": {
+            "type": "object",
+            "properties": {
+                "server": {
+                    "$ref": "#/definitions/servers.Server"
+                }
+            }
+        },
         "github_com_itera-io_openstack-web-client_api_dto.GetVolumeLimitResponse": {
             "type": "object",
             "properties": {
@@ -1820,6 +1889,145 @@
                 "trunk": {
                     "description": "Trunk represents a number of trunks. A \"-1\" value means no limit.",
                     "type": "integer"
+                }
+            }
+        },
+        "servers.AttachedVolume": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "servers.Fault": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "created": {
+                    "type": "string"
+                },
+                "details": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "servers.Server": {
+            "type": "object",
+            "properties": {
+                "accessIPv4": {
+                    "description": "AccessIPv4 and AccessIPv6 contain the IP addresses of the server,\nsuitable for remote access for administration.",
+                    "type": "string"
+                },
+                "accessIPv6": {
+                    "type": "string"
+                },
+                "addresses": {
+                    "description": "Addresses includes a list of all IP addresses assigned to the server,\nkeyed by pool.",
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "adminPass": {
+                    "description": "AdminPass will generally be empty (\"\").  However, it will contain the\nadministrative password chosen when provisioning a new server without a\nset AdminPass setting in the first place.\nNote that this is the ONLY time this field will be valid.",
+                    "type": "string"
+                },
+                "created": {
+                    "type": "string"
+                },
+                "fault": {
+                    "description": "Fault contains failure information about a server.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/servers.Fault"
+                        }
+                    ]
+                },
+                "flavor": {
+                    "description": "Flavor refers to a JSON object, which itself indicates the hardware\nconfiguration of the deployed server.",
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "hostid": {
+                    "description": "HostID is the host where the server is located in the cloud.",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "ID uniquely identifies this server amongst all other servers,\nincluding those not accessible to the current tenant.",
+                    "type": "string"
+                },
+                "key_name": {
+                    "description": "KeyName indicates which public key was injected into the server on launch.",
+                    "type": "string"
+                },
+                "links": {
+                    "description": "Links includes HTTP references to the itself, useful for passing along to\nother APIs that might want a server reference.",
+                    "type": "array",
+                    "items": {}
+                },
+                "metadata": {
+                    "description": "Metadata includes a list of all user-specified key-value pairs attached\nto the server.",
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "description": "Name contains the human-readable name for the server.",
+                    "type": "string"
+                },
+                "os-extended-volumes:volumes_attached": {
+                    "description": "AttachedVolumes includes the volume attachments of this instance",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/servers.AttachedVolume"
+                    }
+                },
+                "progress": {
+                    "description": "Progress ranges from 0..100.\nA request made against the server completes only once Progress reaches 100.",
+                    "type": "integer"
+                },
+                "security_groups": {
+                    "description": "SecurityGroups includes the security groups that this instance has applied\nto it.",
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": true
+                    }
+                },
+                "server_groups": {
+                    "description": "ServerGroups is a slice of strings containing the UUIDs of the\nserver groups to which the server belongs. Currently this can\ncontain at most one entry.\nNew in microversion 2.71",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "status": {
+                    "description": "Status contains the current operational status of the server,\nsuch as IN_PROGRESS or ACTIVE.",
+                    "type": "string"
+                },
+                "tags": {
+                    "description": "Tags is a slice/list of string tags in a server.\nThe requires microversion 2.26 or later.",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "tenant_id": {
+                    "description": "TenantID identifies the tenant owning this server resource.",
+                    "type": "string"
+                },
+                "updated": {
+                    "description": "Updated and Created contain ISO-8601 timestamps of when the state of the\nserver last changed, and when it was created.",
+                    "type": "string"
+                },
+                "user_id": {
+                    "description": "UserID uniquely identifies the user account owning the tenant.",
+                    "type": "string"
                 }
             }
         },
